
    2.15.3: In progress...

     FIXED: RDS receiver skips some messages.


    2.15.2: Released January 8, 2022

       NEW: Save & restore center frequency when playing I/Q files.
     FIXED: Device selection fails for some SoapySDR devices.
     FIXED: Segfault when starting AppImage on some systems.
     FIXED: Crash/freeze after stopping audio recorder or AFSK1200 decoder.
  IMPROVED: Frequency accuracy of plots at high zoom levels.


    2.15.1: Released December 18, 2021

     FIXED: DSP stops when device is changed.
     FIXED: USB error when device settings are changed.
     FIXED: Changing frequency using the keyboard doesn't work on MacOS.


      2.15: Released December 15, 2021

       NEW: Start/stop RDS and fetch Program Identification via remote control.
       NEW: Added IQ balancing to MacOS release.
     FIXED: Erratic behaviour of S-meter.
     FIXED: Compilation error due to missing include.
     FIXED: Startup crash on Windows.
     FIXED: I/Q playback when filename contains special characters.
  IMPROVED: Reordered the receiver mode drop-down list.
  IMPROVED: Receiver mode is now stored as a string in settings files.
  IMPROVED: Increased automatic squelch margin to 3 dB.


    2.14.6: Released October 6, 2021

     FIXED: SoapyPlutoSDR driver on MacOS.
  IMPROVED: MacOS releases are now signed & notarized.


    2.14.5: Released October 3, 2021

       NEW: Added SoapyRemote to AppImage and DMG releases.
       NEW: Added SoapyPlutoSDR to DMG release.
       NEW: Preliminary support for GNU Radio 3.10.
     FIXED: Compatibility with case-sensitive filesystems on MacOS.
  IMPROVED: Better reception of RDS signals.


    2.14.4: Released December 28, 2020

       NEW: Many more keyboard shortcuts.
       NEW: Display filename when recording audio.
     FIXED: Audio output doesn't work on MacOS Big Sur.
     FIXED: DC remove button doesn't work when Demod Off mode is selected.
  IMPROVED: Better demodulation of FM stereo signals.

