@@ -2,6 +2,7 @@
     2.15.3: In progress...
 
      FIXED: RDS receiver skips some messages.
+     FIXED: Buffer overruns in AFSK1200 decoder.
 
 
     2.15.2: Released January 8, 2022
